<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.anca.scorekeeper4fun.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/fun2" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/myLayout1"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparency"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/myPadding1"
                    android:text="@string/leffe"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/textSize1"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/team_leffe_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/myPadding2"
                    android:text="@string/cups"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize2" />

                <Button
                    style="@style/ScoreButtonStyle"
                    android:onClick="addThreeForTeamLeffe"
                    android:text="@string/_3_points" />

                <Button
                    style="@style/ScoreButtonStyle"
                    android:onClick="addTwoForTeamLeffe"
                    android:text="@string/_2_points" />

                <Button
                    style="@style/ScoreButtonStyle"
                    android:onClick="addOneForTeamLeffe"
                    android:text="@string/_1_point" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="@dimen/myLayout1"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparency"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/myPadding1"
                    android:text="@string/peroni"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/textSize1"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/team_peroni_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/myPadding2"
                    android:text="@string/cups"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize2" />

                <Button
                    style="@style/ScoreButtonStyle"
                    android:onClick="addThreeForTeamPeroni"
                    android:text="@string/_3_points" />

                <Button
                    style="@style/ScoreButtonStyle"
                    android:onClick="addTwoForTeamPeroni"
                    android:text="@string/_2_points" />

                <Button
                    style="@style/ScoreButtonStyle"
                    android:onClick="addOneForTeamPeroni"
                    android:text="@string/_1_point" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/redbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drink"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin2"
            android:background="@color/red"
            android:fontFamily="sans-serif"
            android:onClick="resetScore"
            android:text="@string/reset"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin3"
            android:fontFamily="sans-serif-medium"
            android:paddingBottom="@dimen/myPadding3"
            android:text="@string/drink"
            android:textColor="@color/darkOrange"
            android:textSize="@dimen/textSize3"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>

